--- a/index-2.html
+++ b/index-2.html
@@ -6,11 +6,12 @@
     <!--====== Required meta tags ======-->
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="">
+    <meta name="description" content="Edulector is a modern coaching centre offering future-focused learning for school, SSC, HSC and admission preparation.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!--====== Title ======-->
-    <title>Edubin - LMS Education HTML Template</title>
+    <title>Edulector – Future-Focused Learning | Coaching Centre</title>
+
     
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
@@ -77,14 +78,14 @@
                     <div class="col-lg-6">
                         <div class="header-contact text-lg-left text-center">
                             <ul>
-                                <li><img src="images/all-icon/map.png" alt="icon"><span>127/5 Mark street, New york</span></li>
-                                <li><img src="images/all-icon/email.png" alt="icon"><span>info@yourmail.com</span></li>
+                                <li><img src="images/all-icon/map.png" alt="icon"><span>Mangalkot, Keshabpur, Jessore </span></li>
+                                <li><img src="images/all-icon/email.png" alt="icon"><span>info@edulactor.com</span></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="header-opening-time text-lg-right text-center">
-                            <p>Opening Hours : Monday to Saturay - 8 Am to 5 Pm</p>
+                            <p>Opening Hours : Saturay To Thursday - 8 Am to 5 Pm</p>
                         </div>
                     </div>
                 </div> <!-- row -->
@@ -109,7 +110,7 @@
                                 </div>
                                 <div class="cont">
                                     <p>Need Help? call us free</p>
-                                    <span>321 325 5678</span>
+                                    <span> +88017 41 752602</span>
                                 </div>
                             </div>
                             <div class="button float-left">
@@ -383,10 +384,10 @@
                 <div class="col-lg-5">
                     <div class="section-title mt-50">
                         <h5>About us</h5>
-                        <h2>Welcome to Edubin </h2>
+                        <h2>Welcome to EduLector </h2>
                     </div> <!-- section title -->
                     <div class="about-cont">
-                        <p>Lorem ipsum gravida nibh vel velit auctor aliquetn sollicitudirem quibibendum auci elit cons equat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet . Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt  mauris. <br> <br> auci elit cons equat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet . Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt  mauris</p>
+                        <p>Edulector is a modern coaching centre offering future-focused learning for school, SSC, HSC and admission preparation. </p>
                         <a href="#" class="main-btn mt-55">Learn More</a>
                     </div>
                 </div> <!-- about cont -->
@@ -398,7 +399,7 @@
                         <ul>
                             <li>
                                 <div class="singel-event">
-                                    <span><i class="fa fa-calendar"></i> 2 December 2018</span>
+                                    <span><i class="fa fa-calendar"></i> 31 December 2025</span>
                                     <a href="events-singel.html"><h4>Campus clean workshop</h4></a>
                                     <span><i class="fa fa-clock-o"></i> 10:00 Am - 3:00 Pm</span>
                                     <span><i class="fa fa-map-marker"></i> Rc Auditorim</span>
@@ -1169,7 +1170,7 @@
                                         <i class="fa fa-home"></i>
                                     </div>
                                     <div class="cont">
-                                        <p>143 castle road 517 district, kiyev port south Canada</p>
+                                        <p>Mangalkot, Keshabpur, Jessore </p>
                                     </div>
                                 </li>
                                 <li>
@@ -1177,7 +1178,7 @@
                                         <i class="fa fa-phone"></i>
                                     </div>
                                     <div class="cont">
-                                        <p>+3 123 456 789</p>
+                                        <p>+88 017 41 752602</p>
                                     </div>
                                 </li>
                                 <li>
@@ -1185,7 +1186,7 @@
                                         <i class="fa fa-envelope-o"></i>
                                     </div>
                                     <div class="cont">
-                                        <p>info@yourmail.com</p>
+                                        <p>info@edulector.com</p>
                                     </div>
                                 </li>
                             </ul>
@@ -1200,7 +1201,7 @@
                 <div class="row">
                     <div class="col-md-8">
                         <div class="copyright text-md-left text-center pt-15">
-                            <p><a target="_blank" href="https://www.templateshub.net">Templates Hub</a> </p>
+                            <p><a target="_blank" href="https://www.loooooa.com">LoooooA</a> </p>
                         </div>
                     </div>
                     <div class="col-md-4">
