--- a/about.html
+++ b/about.html
@@ -5,11 +5,12 @@
     <!--====== Required meta tags ======-->
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="">
+    <meta name="description" content="Edulector is a modern coaching centre offering future-focused learning for school, SSC, HSC and admission preparation.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!--====== Title ======-->
-    <title>Edulector - Future-Focused Learning</title>
+    <title>Edulector – Future-Focused Learning | Coaching Centre</title>
+
     
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
@@ -76,8 +77,8 @@
                     <div class="col-lg-6">
                         <div class="header-contact text-lg-left text-center">
                             <ul>
-                                <li><img src="images/all-icon/map.png" alt="icon"><span>127/5 Mark street, New york</span></li>
-                                <li><img src="images/all-icon/email.png" alt="icon"><span>info@yourmail.com</span></li>
+                                <li><img src="images/all-icon/map.png" alt="icon"><span>Mangalkot, Keshabpur, Jessore </span></li>
+                                <li><img src="images/all-icon/email.png" alt="icon"><span>info@edulector.com</span></li>
                             </ul>
                         </div>
                     </div>
@@ -253,10 +254,10 @@
                 <div class="col-lg-5">
                     <div class="section-title mt-50">
                         <h5>About us</h5>
-                        <h2>Welcome to Edubin </h2>
+                        <h2>Welcome to EduLector </h2>
                     </div> <!-- section title -->
                     <div class="about-cont">
-                        <p>Lorem ipsum gravida nibh vel velit auctor aliquetn sollicitudirem quibibendum auci elit cons equat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet . Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt  mauris. <br> <br> auci elit cons equat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet . Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt  mauris</p>
+                        <p>Edulector is a modern coaching centre offering future-focused learning for school, SSC, HSC and admission preparation.</p>
                     </div>
                 </div> <!-- about cont -->
                 <div class="col-lg-7">
@@ -271,21 +272,21 @@
                         <div class="about-singel-items mt-30">
                             <span>01</span>
                             <h4>Why Choose us</h4>
-                            <p>Lorem ipsum gravida nibh vel velit auctor aliquetn sollicitudirem quibibendum auci elit sollicitudirem quibibendum auci</p>
+                            <p>Edulector is a modern coaching centre offering future-focused learning for school, SSC, HSC and admission preparation.</p>
                         </div> <!-- about singel -->
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-10">
                         <div class="about-singel-items mt-30">
                             <span>02</span>
                             <h4>Our Mission</h4>
-                            <p>Lorem ipsum gravida nibh vel velit auctor aliquetn sollicitudirem quibibendum auci elit sollicitudirem quibibendum auci</p>
+                            <p>Edulector is a modern coaching centre offering future-focused learning for school, SSC, HSC and admission preparation.</p>
                         </div> <!-- about singel -->
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-10">
                         <div class="about-singel-items mt-30">
                             <span>03</span>
                             <h4>Our vission</h4>
-                            <p>Lorem ipsum gravida nibh vel velit auctor aliquetn sollicitudirem quibibendum auci elit sollicitudirem quibibendum auci</p>
+                            <p>Edulector is a modern coaching centre offering future-focused learning for school, SSC, HSC and admission preparation.</p>
                         </div> <!-- about singel -->
                     </div>
                 </div> <!-- row -->
@@ -608,7 +609,7 @@
                                         <i class="fa fa-home"></i>
                                     </div>
                                     <div class="cont">
-                                        <p>143 castle road 517 district, kiyev port south Canada</p>
+                                        <p>Mangalkot, Keshabpur, Jessore </p>
                                     </div>
                                 </li>
                                 <li>
@@ -616,7 +617,7 @@
                                         <i class="fa fa-phone"></i>
                                     </div>
                                     <div class="cont">
-                                        <p>+3 123 456 789</p>
+                                        <p>+88017 41 752602</p>
                                     </div>
                                 </li>
                                 <li>
@@ -624,7 +625,7 @@
                                         <i class="fa fa-envelope-o"></i>
                                     </div>
                                     <div class="cont">
-                                        <p>info@yourmail.com</p>
+                                        <p>info@edulector.com</p>
                                     </div>
                                 </li>
                             </ul>
@@ -639,7 +640,7 @@
                 <div class="row">
                     <div class="col-md-8">
                         <div class="copyright text-md-left text-center pt-15">
-                            <p><a target="_blank" href="https://www.templateshub.net">Templates Hub</a> </p>
+                            <p><a target="_blank" href="https://www.loooooa.com">LoooooA</a> </p>
                         </div>
                     </div>
                     <div class="col-md-4">
