--- a/index-2.html
+++ b/index-2.html
@@ -79,7 +79,7 @@
                         <div class="header-contact text-lg-left text-center">
                             <ul>
                                 <li><img src="images/all-icon/map.png" alt="icon"><span>Mangalkot, Keshabpur, Jessore </span></li>
-                                <li><img src="images/all-icon/email.png" alt="icon"><span>info@edulactor.com</span></li>
+                                <li><img src="images/all-icon/email.png" alt="icon"><span>edulectorinfo@gmail.com</span></li>
                             </ul>
                         </div>
                     </div>
@@ -233,8 +233,8 @@
                 <div class="row">
                     <div class="col-xl-7 col-lg-9">
                         <div class="slider-cont">
-                            <h1 data-animation="bounceInLeft" data-delay="1s">Choose the right theme for education</h1>
-                            <p data-animation="fadeInUp" data-delay="1.3s">Donec vitae sapien ut libearo venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt  Sed fringilla mauri amet nibh.</p>
+                            <h1 data-animation="bounceInLeft" data-delay="1s">শেখার জন্য সঠিক কোচিং সেন্টার বেছে নিন</h1>
+                            <p data-animation="fadeInUp" data-delay="1.3s">সঠিক কোচিং সেন্টার নির্বাচনই শিক্ষার্থীর সাফল্যের প্রথম ধাপ। EduLector শিক্ষার্থীদের জন্য অভিজ্ঞ শিক্ষক, ব্যক্তিগত যত্ন এবং সহায়ক শিক্ষার পরিবেশ নিশ্চিত করে, যেখানে তারা আত্মবিশ্বাসের সাথে শেখার সুযোগ পায়।</p>
                             <ul>
                                 <li><a data-animation="fadeInUp" data-delay="1.6s" class="main-btn" href="#">Read More</a></li>
                                 <li><a data-animation="fadeInUp" data-delay="1.9s" class="main-btn main-btn-2" href="#">Get Started</a></li>
@@ -250,8 +250,8 @@
                 <div class="row">
                     <div class="col-xl-7 col-lg-9">
                         <div class="slider-cont">
-                            <h1 data-animation="bounceInLeft" data-delay="1s">Choose the right theme for education</h1>
-                            <p data-animation="fadeInUp" data-delay="1.3s">Donec vitae sapien ut libearo venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt  Sed fringilla mauri amet nibh.</p>
+                            <h1 data-animation="bounceInLeft" data-delay="1s">শিক্ষাগত সাফল্যের জন্য শক্ত ভিত্তি গড়ে তুলুন</h1>
+                            <p data-animation="fadeInUp" data-delay="1.3s">আমরা মুখস্থ নয়, বিষয়ভিত্তিক ও ধারণাভিত্তিক শিক্ষায় গুরুত্ব দিই। আমাদের পরিকল্পিত পাঠদান শিক্ষার্থীদের মৌলিক ধারণা দৃঢ় করে এবং পরীক্ষায় ভালো ফল অর্জনে সহায়তা করে।
                             <ul>
                                 <li><a data-animation="fadeInUp" data-delay="1.6s" class="main-btn" href="#">Read More</a></li>
                                 <li><a data-animation="fadeInUp" data-delay="1.9s" class="main-btn main-btn-2" href="#">Get Started</a></li>
@@ -267,8 +267,8 @@
                 <div class="row">
                     <div class="col-xl-7 col-lg-9">
                         <div class="slider-cont">
-                            <h1 data-animation="bounceInLeft" data-delay="1s">Choose the right theme for education</h1>
-                            <p data-animation="fadeInUp" data-delay="1.3s">Donec vitae sapien ut libearo venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt  Sed fringilla mauri amet nibh.</p>
+                            <h1 data-animation="bounceInLeft" data-delay="1s">স্মার্ট ও উন্নত শিক্ষার যাত্রা শুরু হোক এখান থেকেই</h1>
+                            <p data-animation="fadeInUp" data-delay="1.3s">EduLector-এ পড়াশোনা মানেই পরিকল্পিত ও ফলাফলমুখী শিক্ষা। অভিজ্ঞ শিক্ষকমণ্ডলী ও নিয়মিত মূল্যায়নের মাধ্যমে শিক্ষার্থীরা গড়ে তোলে আত্মবিশ্বাস, শৃঙ্খলা ও শেখার আগ্রহ।</p>
                             <ul>
                                 <li><a data-animation="fadeInUp" data-delay="1.6s" class="main-btn" href="#">Read More</a></li>
                                 <li><a data-animation="fadeInUp" data-delay="1.9s" class="main-btn main-btn-2" href="#">Get Started</a></li>
@@ -441,7 +441,7 @@
                 <div class="row no-gutters">
                     <div class="col-lg-6">
                         <div class="apply-cont apply-color-1">
-                            <h3>Apply for fall 2019</h3>
+                            <h3>Apply for fall 2026</h3>
                             <p>Gravida nibh vel velit auctor aliquetn sollicitudirem sem quibibendum auci elit cons equat ipsutis sem nibh id elituis sed odio sit amet nibh vulputate cursus equat ipsutis.</p>
                             <a href="#" class="main-btn">Apply Now</a>
                         </div> <!-- apply cont -->
@@ -671,7 +671,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 order-last order-lg-first">
                     <div class="video text-lg-left text-center pt-50">
-                        <a class="Video-popup" href="https://www.youtube.com/watch?v=bRRtdzJH1oE"><i class="fa fa-play"></i></a>
+                        <a class="Video-popup" href="#"><i class="fa fa-play"></i></a>
                     </div> <!-- row -->
                 </div>
                 <div class="col-lg-5 offset-lg-1 order-first order-lg-last">
@@ -734,7 +734,7 @@
                         <h2>Meet Our teachers</h2>
                     </div> <!-- section title -->
                     <div class="teachers-cont">
-                        <p>Lorem ipsum gravida nibh vel velit auctor aliquetn sollicitudirem quibibendum auci elit cons equat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet . Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt  mauris. <br> <br> auci elit cons equat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet . Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt  mauris</p>
+                        <p>Our teachers are experienced, dedicated, and passionate about student success. They focus on clear explanations, personal guidance, and continuous support to help every learner reach their full potential.</p>
                         <a href="#" class="main-btn mt-55">Career with us</a>
                     </div> <!-- teachers cont -->
                 </div>
@@ -990,7 +990,7 @@
                         </div>
                         <div class="news-cont">
                             <ul>
-                                <li><a href="#"><i class="fa fa-calendar"></i>2 December 2018 </a></li>
+                                <li><a href="#"><i class="fa fa-calendar"></i>2 December 2025 </a></li>
                                 <li><a href="#"> <span>By</span> Adam linn</a></li>
                             </ul>
                             <a href="blog-singel.html"><h3>Tips to grade high cgpa in university life</h3></a>
@@ -1009,7 +1009,7 @@
                             <div class="col-sm-8">
                                 <div class="news-cont mt-30">
                                     <ul>
-                                        <li><a href="#"><i class="fa fa-calendar"></i>2 December 2018 </a></li>
+                                        <li><a href="#"><i class="fa fa-calendar"></i>2 December 2025 </a></li>
                                         <li><a href="#"> <span>By</span> Adam linn</a></li>
                                     </ul>
                                     <a href="blog-singel.html"><h3>Intellectual communication</h3></a>
@@ -1028,7 +1028,7 @@
                             <div class="col-sm-8">
                                 <div class="news-cont mt-30">
                                     <ul>
-                                        <li><a href="#"><i class="fa fa-calendar"></i>2 December 2018 </a></li>
+                                        <li><a href="#"><i class="fa fa-calendar"></i>2 December 2025 </a></li>
                                         <li><a href="#"> <span>By</span> Adam linn</a></li>
                                     </ul>
                                     <a href="blog-singel.html"><h3>Study makes you perfect</h3></a>
@@ -1047,7 +1047,7 @@
                             <div class="col-sm-8">
                                 <div class="news-cont mt-30">
                                     <ul>
-                                        <li><a href="#"><i class="fa fa-calendar"></i>2 December 2018 </a></li>
+                                        <li><a href="#"><i class="fa fa-calendar"></i>2 December 2025 </a></li>
                                         <li><a href="#"> <span>By</span> Adam linn</a></li>
                                     </ul>
                                     <a href="blog-singel.html"><h3>Technology edcution is now....</h3></a>
@@ -1155,7 +1155,7 @@
                                 <li><a href="#"><i class="fa fa-angle-right"></i>Privacy</a></li>
                                 <li><a href="#"><i class="fa fa-angle-right"></i>Policy</a></li>
                                 <li><a href="#"><i class="fa fa-angle-right"></i>Support</a></li>
-                                <li><a href="#"><i class="fa fa-angle-right"></i>Documentation</a></li>
+                                <li><a href="#"><i class="fa fa-angle-right"></i>Services</a></li>
                             </ul>
                         </div> <!-- support -->
                     </div>
@@ -1186,7 +1186,7 @@
                                         <i class="fa fa-envelope-o"></i>
                                     </div>
                                     <div class="cont">
-                                        <p>info@edulector.com</p>
+                                        <p>edulectorinfo@gmail.com</p>
                                     </div>
                                 </li>
                             </ul>
