--- a/index-2.html
+++ b/index-2.html
@@ -314,7 +314,7 @@
                                             <img src="images/all-icon/ctg-2.png" alt="Icon">
                                         </span>
                                         <span class="cont">
-                                            <span>Business</span>
+                                            <span>Math</span>
                                         </span>
                                     </span> <!-- singel category -->
                                 </a>
@@ -350,7 +350,7 @@
                                             <img src="images/all-icon/ctg-2.png" alt="Icon">
                                         </span>
                                         <span class="cont">
-                                            <span>Business</span>
+                                            <span>Math</span>
                                         </span>
                                     </span> <!-- singel category -->
                                 </a>
@@ -441,15 +441,15 @@
                 <div class="row no-gutters">
                     <div class="col-lg-6">
                         <div class="apply-cont apply-color-1">
-                            <h3>Apply for fall 2026</h3>
-                            <p>Gravida nibh vel velit auctor aliquetn sollicitudirem sem quibibendum auci elit cons equat ipsutis sem nibh id elituis sed odio sit amet nibh vulputate cursus equat ipsutis.</p>
+                            <h3>Apply for SSC</h3>
+                            <p>SSC পরীক্ষায় ভালো ফল অর্জনের জন্য বিষয়ভিত্তিক সহায়তা, অভিজ্ঞ শিক্ষকের দিকনির্দেশনা এবং পরীক্ষাভিত্তিক প্রস্তুতির সুযোগ নিন।</p>
                             <a href="#" class="main-btn">Apply Now</a>
                         </div> <!-- apply cont -->
                     </div>
                     <div class="col-lg-6">
                         <div class="apply-cont apply-color-2">
-                            <h3>Apply for scholarship</h3>
-                            <p>Gravida nibh vel velit auctor aliquetn sollicitudirem sem quibibendum auci elit cons equat ipsutis sem nibh id elituis sed odio sit amet nibh vulputate cursus equat ipsutis.</p>
+                            <h3>Apply for HSC</h3>
+                            <p>HSC পরীক্ষায় সফলতার জন্য পরিকল্পিত কোচিং, দক্ষ শিক্ষকমণ্ডলী এবং নিয়মিত মূল্যায়নের মাধ্যমে নিজের লক্ষ্য পূরণ করুন।</p>
                             <a href="#" class="main-btn">Apply Now</a>
                         </div> <!-- apply cont -->
                     </div> 
