--- a/index-2.html
+++ b/index-2.html
@@ -139,8 +139,7 @@
                                         <a class="active" href="index-2.html">Home</a>
                                         <ul class="sub-menu">
                                             <li><a class="active" href="index-2.html">Home 01</a></li>
-                                            <li><a href="index-3.html">Home 02</a></li>
-                                            <li><a href="index-4.html">Home 03</a></li>
+                                            
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -156,8 +155,9 @@
                                     <li class="nav-item">
                                         <a href="events.html">Events</a>
                                         <ul class="sub-menu">
-                                            <li><a href="events.html">Events</a></li>
-                                            <li><a href="events-singel.html">Event Singel</a></li>
+                                           <!--
+                                           <li><a href="events.html">Events</a></li>
+                                            <li><a href="events-singel.html">Event Singel</a></li> -->
                                         </ul>
                                     </li>
                                     <li class="nav-item">
