--- a/index-2.html
+++ b/index-2.html
@@ -145,13 +145,13 @@
                                     <li class="nav-item">
                                         <a href="about.html">About us</a>
                                     </li>
-                                    <li class="nav-item">
+                                   <!-- <li class="nav-item">
                                         <a href="courses.html">Courses</a>
                                         <ul class="sub-menu">
                                             <li><a href="courses.html">Courses</a></li>
                                             <li><a href="courses-singel.html">Course Singel</a></li>
                                         </ul>
-                                    </li>
+                                    </li> -->
                                     <li class="nav-item">
                                         <a href="events.html">Events</a>
                                         <ul class="sub-menu">
