--- a/index-2.html
+++ b/index-2.html
@@ -381,8 +381,8 @@
     <!--====== CATEGORY PART ENDS ======-->
    
     <!--====== ABOUT PART START ======-->
-    <!--
-    <section id="about-part" class="pt-65">
+    
+    <!-- <section id="about-part" class="pt-65">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5">
@@ -433,8 +433,8 @@
         <div class="about-bg">
             <img src="images/about/bg-1.png" alt="About">
         </div>
-    </section>
-   -->
+    </section> -->
+   
     
     <!--====== ABOUT PART ENDS ======-->
    
