--- a/index-2.html
+++ b/index-2.html
@@ -750,6 +750,7 @@
     <!--====== TEACHERS PART START ======-->
     <!--
     <section id="teachers-part" class="pt-70 pb-120">
+   <!--
         <div class="container">
             <div class="row">
    <!--
@@ -817,7 +818,7 @@
                 </div>
    -->
             </div> <!-- row -->
-        </div> <!-- container -->
+        </div> <!-- container -->-->
     </section>
    -->
     
