--- a/index-2.html
+++ b/index-2.html
@@ -753,8 +753,8 @@
    <!--
         <div class="container">
             <div class="row">
-   <!--
                 <div class="col-lg-5">
+   <!--
                     <div class="section-title mt-50">
                         <h5>Featured Teachers</h5>
                         <h2>Meet Our teachers</h2>
@@ -1023,8 +1023,10 @@
                         <h2>From the news</h2>
                     </div> <!-- section title -->
                 </div>
+   -->
             </div> <!-- row -->
             <div class="row">
+               <!--
                 <div class="col-lg-6">
                     <div class="singel-news mt-30">
                         <div class="news-thum pb-25">
@@ -1182,17 +1184,17 @@
                             <ul>
                                 <li><a href="index-2.html"><i class="fa fa-angle-right"></i>Home</a></li>
                                 <li><a href="about.html"><i class="fa fa-angle-right"></i>About us</a></li>
-                                <li><a href="courses.html"><i class="fa fa-angle-right"></i>Courses</a></li>
-                                <li><a href="blog.html"><i class="fa fa-angle-right"></i>News</a></li>
-                                <li><a href="events.html"><i class="fa fa-angle-right"></i>Event</a></li>
+                                <li><a href="contact.html"><i class="fa fa-angle-right"></i>Contact</a></li>
+                               <!-- <li><a href="blog.html"><i class="fa fa-angle-right"></i>News</a></li>
+                                <li><a href="events.html"><i class="fa fa-angle-right"></i>Event</a></li> -->
                             </ul>
-                            <ul>
+                          <!--  <ul>
                                 <li><a href="#"><i class="fa fa-angle-right"></i>Gallery</a></li>
                                 <li><a href="shop.html"><i class="fa fa-angle-right"></i>Shop</a></li>
                                 <li><a href="teachers.html"><i class="fa fa-angle-right"></i>Teachers</a></li>
                                 <li><a href="#"><i class="fa fa-angle-right"></i>Support</a></li>
                                 <li><a href="contact.html"><i class="fa fa-angle-right"></i>Contact</a></li>
-                            </ul>
+                            </ul> -->
                         </div> <!-- footer link -->
                     </div>
                     <div class="col-lg-2 col-md-6 col-sm-6">
