--- a/index-2.html
+++ b/index-2.html
@@ -958,9 +958,9 @@
                             </div>
                         </div>
                         <div class="testimonial-cont">
-                            <p>Aliquetn sollicitudirem quibibendum auci elit cons equat ipsutis sem nibh id elit. Duis sed odio sit amet sem nibh id elit sollicitudirem </p>
-                            <h6>Rubina Helen</h6>
-                            <span>Bsc, Engineering</span>
+                            <p>EduLector-এর শিক্ষকরা খুব যত্নসহকারে পড়ান। নিয়মিত টেস্ট ও গাইডলাইনের কারণে আমার পড়াশোনার ভয় অনেক কমে গেছে। এখান থেকে পড়ে আমি আত্মবিশ্বাসের সাথে পরীক্ষার প্রস্তুতি নিতে পারছি। </p>
+                            <h6>Md.Rakib Hossain</h6>
+                            <span>SSC Candidate</span>
                         </div>
                     </div> <!-- singel testimonial -->
                 </div>
@@ -973,9 +973,9 @@
                             </div>
                         </div>
                         <div class="testimonial-cont">
-                            <p>Aliquetn sollicitudirem quibibendum auci elit cons equat ipsutis sem nibh id elit. Duis sed odio sit amet sem nibh id elit sollicitudirem </p>
-                            <h6>Rubina Helen</h6>
-                            <span>Bsc, Engineering</span>
+                            <p>EduLector-এ পড়াশোনার পরিবেশ খুব ভালো। ম্যাডামরা সহজভাবে বুঝিয়ে দেন, তাই বিষয়গুলো পরিষ্কার হয়। নিয়মিত ক্লাসের কারণে আমার রেজাল্ট আগের চেয়ে অনেক উন্নত হয়েছে। </p>
+                            <h6>Nusrat Jahan</h6>
+                            <span>Class 10 Student</span>
                         </div>
                     </div> <!-- singel testimonial -->
                 </div>
@@ -988,9 +988,9 @@
                             </div>
                         </div>
                         <div class="testimonial-cont">
-                            <p>Aliquetn sollicitudirem quibibendum auci elit cons equat ipsutis sem nibh id elit. Duis sed odio sit amet sem nibh id elit sollicitudirem </p>
-                            <h6>Rubina Helen</h6>
-                            <span>Bsc, Engineering</span>
+                            <p>একজন অভিভাবক হিসেবে আমি EduLector-এর শিক্ষাপদ্ধতিতে সন্তুষ্ট। এখানে শিক্ষার্থীদের প্রতি আলাদা যত্ন নেওয়া হয় এবং নিয়মিত অগ্রগতি জানানো হয়। এটি একটি নির্ভরযোগ্য কোচিং সেন্টার। </p>
+                            <h6>Md.Abdul Karim</h6>
+                            <span>Guardian</span>
                         </div>
                     </div> <!-- singel testimonial -->
                 </div>
