--- a/index-2.html
+++ b/index-2.html
@@ -703,8 +703,8 @@
                                         <img src="images/all-icon/f-1.png" alt="icon">
                                     </div>
                                     <div class="cont">
-                                        <h4>Global Certificate</h4>
-                                        <p>Gravida nibh vel velit auctor aliquetn auci elit cons solliazcitudirem sem quibibendum sem nibhutis.</p>
+                                        <h4>যোগ্য ও অভিজ্ঞ শিক্ষক</h4>
+                                        <p>আমাদের শিক্ষকমণ্ডলী বিষয়ভিত্তিক দক্ষ এবং অভিজ্ঞ। তারা সহজ ও কার্যকর পদ্ধতিতে পাঠদান করে শিক্ষার্থীদের বুঝে শেখার সুযোগ করে দেন।</p>
                                     </div>
                                 </div> <!-- singel feature -->
                             </li>
@@ -714,8 +714,8 @@
                                         <img src="images/all-icon/f-2.png" alt="icon">
                                     </div>
                                     <div class="cont">
-                                        <h4>Alumni Support</h4>
-                                        <p>Gravida nibh vel velit auctor aliquetn auci elit cons solliazcitudirem sem quibibendum sem nibhutis.</p>
+                                        <h4>২৪/৭ সহায়তা</h4>
+                                        <p>শিক্ষার্থীদের যেকোনো সমস্যায় আমরা সার্বক্ষণিক সহায়তা প্রদান করি। পড়াশোনা সংক্রান্ত প্রশ্ন বা গাইডলাইনের জন্য শিক্ষার্থীরা প্রয়োজন অনুযায়ী সাহায্য পায়।</p>
                                     </div>
                                 </div> <!-- singel feature -->
                             </li>
@@ -725,8 +725,8 @@
                                         <img src="images/all-icon/f-3.png" alt="icon">
                                     </div>
                                     <div class="cont">
-                                        <h4>Books & Library</h4>
-                                        <p>Gravida nibh vel velit auctor aliquetn auci elit cons solliazcitudirem sem quibibendum sem nibhutis.</p>
+                                        <h4>ফলাফলভিত্তিক পাঠদান</h4>
+                                        <p>আমাদের পাঠদান পদ্ধতি সম্পূর্ণ পরীক্ষাভিত্তিক ও ফলাফলমুখী। নিয়মিত টেস্ট ও মূল্যায়নের মাধ্যমে শিক্ষার্থীদের সেরা ফল অর্জনে প্রস্তুত করা হয়।/p>
                                     </div>
                                 </div> <!-- singel feature -->
                             </li>
@@ -959,7 +959,7 @@
                         </div>
                         <div class="testimonial-cont">
                             <p>EduLector-এর শিক্ষকরা খুব যত্নসহকারে পড়ান। নিয়মিত টেস্ট ও গাইডলাইনের কারণে আমার পড়াশোনার ভয় অনেক কমে গেছে। এখান থেকে পড়ে আমি আত্মবিশ্বাসের সাথে পরীক্ষার প্রস্তুতি নিতে পারছি। </p>
-                            <h6>Md.Rakib Hossain</h6>
+                            <h6>Shela Rahaman</h6>
                             <span>SSC Candidate</span>
                         </div>
                     </div> <!-- singel testimonial -->
@@ -973,9 +973,9 @@
                             </div>
                         </div>
                         <div class="testimonial-cont">
-                            <p>EduLector-এ পড়াশোনার পরিবেশ খুব ভালো। ম্যাডামরা সহজভাবে বুঝিয়ে দেন, তাই বিষয়গুলো পরিষ্কার হয়। নিয়মিত ক্লাসের কারণে আমার রেজাল্ট আগের চেয়ে অনেক উন্নত হয়েছে। </p>
-                            <h6>Nusrat Jahan</h6>
-                            <span>Class 10 Student</span>
+                            <p>একজন অভিভাবক হিসেবে আমি EduLector-এর শিক্ষাপদ্ধতিতে সন্তুষ্ট। এখানে শিক্ষার্থীদের প্রতি আলাদা যত্ন নেওয়া হয় এবং নিয়মিত অগ্রগতি জানানো হয়। এটি একটি নির্ভরযোগ্য কোচিং সেন্টার।</p>
+                            <h6>Md.Abdul Karim</h6>
+                            <span>Guardian</span>
                         </div>
                     </div> <!-- singel testimonial -->
                 </div>
@@ -988,9 +988,9 @@
                             </div>
                         </div>
                         <div class="testimonial-cont">
-                            <p>একজন অভিভাবক হিসেবে আমি EduLector-এর শিক্ষাপদ্ধতিতে সন্তুষ্ট। এখানে শিক্ষার্থীদের প্রতি আলাদা যত্ন নেওয়া হয় এবং নিয়মিত অগ্রগতি জানানো হয়। এটি একটি নির্ভরযোগ্য কোচিং সেন্টার। </p>
-                            <h6>Md.Abdul Karim</h6>
-                            <span>Guardian</span>
+                            <p>EduLector-এ পড়াশোনার পরিবেশ খুব ভালো। ম্যাডামরা সহজভাবে বুঝিয়ে দেন, তাই বিষয়গুলো পরিষ্কার হয়। নিয়মিত ক্লাসের কারণে আমার রেজাল্ট আগের চেয়ে অনেক উন্নত হয়েছে।</p>
+                            <h6>Nusrat Jahan</h6>
+                            <span>Class 10 Student</span>
                         </div>
                     </div> <!-- singel testimonial -->
                 </div>
