--- a/index-2.html
+++ b/index-2.html
@@ -294,7 +294,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="category-text pt-40">
-                            <h2>Best platform to learn everything</h2>
+                            <h2>সবকিছু শেখার জন্য সেরা প্ল্যাটফর্ম</h2>
                         </div>
                     </div>
                     <div class="col-lg-6 offset-lg-1 col-md-8 offset-md-2 col-sm-8 offset-sm-2 col-8 offset-2">
@@ -306,7 +306,7 @@
                                             <img src="images/all-icon/ctg-1.png" alt="Icon">
                                         </span>
                                         <span class="cont">
-                                            <span>Language</span>
+                                            <span>ভাষা</span>
                                         </span>
                                     </span> <!-- singel category -->
                                 </a>
@@ -318,7 +318,7 @@
                                             <img src="images/all-icon/ctg-2.png" alt="Icon">
                                         </span>
                                         <span class="cont">
-                                            <span>Math</span>
+                                            <span>গণিত</span>
                                         </span>
                                     </span> <!-- singel category -->
                                 </a>
@@ -330,7 +330,7 @@
                                             <img src="images/all-icon/ctg-3.png" alt="Icon">
                                         </span>
                                         <span class="cont">
-                                            <span>Literature</span>
+                                            <span>সাহিত্য</span>
                                         </span>
                                     </span> <!-- singel category -->
                                 </a>
