--- a/about.html
+++ b/about.html
@@ -136,15 +136,18 @@
                                 <ul class="navbar-nav mr-auto">
                                     <li class="nav-item">
                                         <a class="active" href="index-2.html">Home</a>
+                                       <!--
                                         <ul class="sub-menu">
                                             <li><a class="active" href="index-2.html">Home 01</a></li>
                                             <li><a href="index-3.html">Home 02</a></li>
                                             <li><a href="index-4.html">Home 03</a></li>
                                         </ul>
+                                       -->
                                     </li>
                                     <li class="nav-item">
                                         <a href="about.html">About us</a>
                                     </li>
+                                   <!--
                                     <li class="nav-item">
                                         <a href="courses.html">Courses</a>
                                         <ul class="sub-menu">
@@ -180,12 +183,15 @@
                                             <li><a href="shop-singel.html">Shop Singel</a></li>
                                         </ul>
                                     </li>
+                                   -->
                                     <li class="nav-item">
                                         <a href="contact.html">Contact</a>
+                                       <!--
                                         <ul class="sub-menu">
                                             <li><a href="contact.html">Contact Us</a></li>
                                             <li><a href="contact-2.html">Contact Us 2</a></li>
                                         </ul>
+                                       -->
                                     </li>
                                 </ul>
                             </div>
@@ -257,7 +263,7 @@
                         <h2>Welcome to EduLector </h2>
                     </div> <!-- section title -->
                     <div class="about-cont">
-                        <p>Edulector is a modern coaching centre offering future-focused learning for school, SSC, HSC and admission preparation.</p>
+                        <p>EduLector একটি বিশ্বাসযোগ্য ও মানসম্মত কোচিং সেন্টার, যেখানে শিক্ষার্থীদের সঠিক দিকনির্দেশনা, ব্যক্তিগত যত্ন এবং গুণগত শিক্ষার মাধ্যমে একাডেমিক সাফল্যের পথে এগিয়ে নেওয়া হয়। আমরা বিশ্বাস করি, প্রতিটি শিক্ষার্থীর সফল হওয়ার সক্ষমতা রয়েছে—প্রয়োজন শুধু সঠিক গাইডলাইন ও পরিচর্যা।</p>
                     </div>
                 </div> <!-- about cont -->
                 <div class="col-lg-7">
@@ -271,22 +277,27 @@
                     <div class="col-lg-4 col-md-6 col-sm-10">
                         <div class="about-singel-items mt-30">
                             <span>01</span>
-                            <h4>Why Choose us</h4>
-                            <p>Edulector is a modern coaching centre offering future-focused learning for school, SSC, HSC and admission preparation.</p>
+                            <h4>কেন আমাদের বেছে নেবেন (Why Choose Us)</h4>
+                            <p>যোগ্য ও অভিজ্ঞ শিক্ষকমণ্ডলী
+ছোট ব্যাচে প্রতিটি শিক্ষার্থীর আলাদা যত্ন
+নিয়মিত ক্লাস টেস্ট ও মডেল টেস্ট
+ফলাফলভিত্তিক ও পরীক্ষামুখী পাঠদান
+দুর্বল শিক্ষার্থীদের জন্য বিশেষ সহায়তা
+Offline ও Online—উভয় সুবিধা</p>
                         </div> <!-- about singel -->
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-10">
                         <div class="about-singel-items mt-30">
                             <span>02</span>
-                            <h4>Our Mission</h4>
-                            <p>Edulector is a modern coaching centre offering future-focused learning for school, SSC, HSC and admission preparation.</p>
+                            <h4>আমাদের মিশন (Our Mission)</h4>
+                            <p>আমাদের মিশন হলো শিক্ষার্থীদের সহজ, কার্যকর ও মানসম্মত শিক্ষা প্রদান করা, যাতে তারা আত্মবিশ্বাসের সাথে পড়াশোনা করে ভালো ফলাফল অর্জন করতে পারে এবং ভবিষ্যতের জন্য প্রস্তুত হয়।</p>
                         </div> <!-- about singel -->
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-10">
                         <div class="about-singel-items mt-30">
                             <span>03</span>
-                            <h4>Our vission</h4>
-                            <p>Edulector is a modern coaching centre offering future-focused learning for school, SSC, HSC and admission preparation.</p>
+                            <h4>আমাদের ভিশন (Our Vision)</h4>
+                            <p>আমাদের ভিশন হলো EduLector-কে একটি নির্ভরযোগ্য ও আদর্শ শিক্ষাপ্রতিষ্ঠান হিসেবে গড়ে তোলা, যেখানে শিক্ষার্থীরা আনন্দের সাথে শেখে এবং জ্ঞান, নৈতিকতা ও দক্ষতার মাধ্যমে সমাজে সফল মানুষ হিসেবে প্রতিষ্ঠিত হয়।</p>
                         </div> <!-- about singel -->
                     </div>
                 </div> <!-- row -->
@@ -332,7 +343,7 @@
     <!--====== COUNTER PART ENDS ======-->
    
     <!--====== TEACHERS PART START ======-->
-    
+    <!--
     <section id="teachers-part" class="pt-65 pb-120">
         <div class="container">
             <div class="row">
@@ -344,6 +355,7 @@
                 </div>
             </div> <!-- row -->
             <div class="row">
+               <!--
                 <div class="col-lg-3 col-sm-6">
                     <div class="singel-teachers mt-30 text-center">
                         <div class="image">
@@ -355,6 +367,7 @@
                         </div>
                     </div> <!-- singel teachers -->
                 </div>
+   <!--
                 <div class="col-lg-3 col-sm-6">
                     <div class="singel-teachers mt-30 text-center">
                         <div class="image">
@@ -366,6 +379,7 @@
                         </div>
                     </div> <!-- singel teachers -->
                 </div>
+   <!--
                 <div class="col-lg-3 col-sm-6">
                     <div class="singel-teachers mt-30 text-center">
                         <div class="image">
@@ -377,6 +391,7 @@
                         </div>
                     </div> <!-- singel teachers -->
                 </div>
+   <!--
                 <div class="col-lg-3 col-sm-6">
                     <div class="singel-teachers mt-30 text-center">
                         <div class="image">
@@ -388,6 +403,7 @@
                         </div>
                     </div> <!-- singel teachers -->
                 </div>
+   <!--
                 <div class="col-lg-3 col-sm-6">
                     <div class="singel-teachers mt-30 text-center">
                         <div class="image">
@@ -399,6 +415,7 @@
                         </div>
                     </div> <!-- singel teachers -->
                 </div>
+   <!--
                 <div class="col-lg-3 col-sm-6">
                     <div class="singel-teachers mt-30 text-center">
                         <div class="image">
@@ -410,6 +427,7 @@
                         </div>
                     </div> <!-- singel teachers -->
                 </div>
+   <!--
                 <div class="col-lg-3 col-sm-6">
                     <div class="singel-teachers mt-30 text-center">
                         <div class="image">
@@ -421,6 +439,7 @@
                         </div>
                     </div> <!-- singel teachers -->
                 </div>
+   <!--
                 <div class="col-lg-3 col-sm-6">
                     <div class="singel-teachers mt-30 text-center">
                         <div class="image">
@@ -435,6 +454,7 @@
             </div> <!-- row -->
         </div> <!-- container -->
     </section>
+   -->
     
     <!--====== TEACHERS PART ENDS ======-->
    
@@ -460,9 +480,9 @@
                             </div>
                         </div>
                         <div class="testimonial-cont">
-                            <p>Aliquetn sollicitudirem quibibendum auci elit cons equat ipsutis sem nibh id elit. Duis sed odio sit amet sem nibh id elit sollicitudirem </p>
-                            <h6>Rubina Helen</h6>
-                            <span>Bsc, Engineering</span>
+                            <p>EduLector-এর শিক্ষকরা খুব যত্নসহকারে পড়ান। নিয়মিত টেস্ট ও গাইডলাইনের কারণে আমার পড়াশোনার ভয় অনেক কমে গেছে। এখান থেকে পড়ে আমি আত্মবিশ্বাসের সাথে পরীক্ষার প্রস্তুতি নিতে পারছি। </p>
+                            <h6>Shela Rohaman</h6>
+                            <span>SSC Candidate</span>
                         </div>
                     </div> <!-- singel testimonial -->
                 </div>
@@ -475,9 +495,9 @@
                             </div>
                         </div>
                         <div class="testimonial-cont">
-                            <p>Aliquetn sollicitudirem quibibendum auci elit cons equat ipsutis sem nibh id elit. Duis sed odio sit amet sem nibh id elit sollicitudirem </p>
-                            <h6>Rubina Helen</h6>
-                            <span>Bsc, Engineering</span>
+                            <p>একজন অভিভাবক হিসেবে আমি EduLector-এর শিক্ষাপদ্ধতিতে সন্তুষ্ট। এখানে শিক্ষার্থীদের প্রতি আলাদা যত্ন নেওয়া হয় এবং নিয়মিত অগ্রগতি জানানো হয়। এটি একটি নির্ভরযোগ্য কোচিং সেন্টার। </p>
+                            <h6>Md.Abdul Karim</h6>
+                            <span>Guardian</span>
                         </div>
                     </div> <!-- singel testimonial -->
                 </div>
@@ -490,9 +510,9 @@
                             </div>
                         </div>
                         <div class="testimonial-cont">
-                            <p>Aliquetn sollicitudirem quibibendum auci elit cons equat ipsutis sem nibh id elit. Duis sed odio sit amet sem nibh id elit sollicitudirem </p>
-                            <h6>Rubina Helen</h6>
-                            <span>Bsc, Engineering</span>
+                            <p>EduLector-এ পড়াশোনার পরিবেশ খুব ভালো। ম্যাডামরা সহজভাবে বুঝিয়ে দেন, তাই বিষয়গুলো পরিষ্কার হয়। নিয়মিত ক্লাসের কারণে আমার রেজাল্ট আগের চেয়ে অনেক উন্নত হয়েছে। </p>
+                            <h6>Nusrat Jahan</h6>
+                            <span>Class 10 Student</span>
                         </div>
                     </div> <!-- singel testimonial -->
                 </div>
@@ -571,7 +591,8 @@
                             <ul>
                                 <li><a href="index-2.html"><i class="fa fa-angle-right"></i>Home</a></li>
                                 <li><a href="about.html"><i class="fa fa-angle-right"></i>About us</a></li>
-                                <li><a href="courses.html"><i class="fa fa-angle-right"></i>Courses</a></li>
+                                <li><a href="contact.html"><i class="fa fa-angle-right"></i>Contact</a></li>
+                               <!--
                                 <li><a href="blog.html"><i class="fa fa-angle-right"></i>News</a></li>
                                 <li><a href="events.html"><i class="fa fa-angle-right"></i>Event</a></li>
                             </ul>
@@ -625,7 +646,7 @@
                                         <i class="fa fa-envelope-o"></i>
                                     </div>
                                     <div class="cont">
-                                        <p>info@edulector.com</p>
+                                        <p>edulectorinfo@gmail.com</p>
                                     </div>
                                 </li>
                             </ul>
