--- a/about.html
+++ b/about.html
@@ -454,7 +454,7 @@ Offline ও Online—উভয় সুবিধা</p>
             </div> <!-- row -->
         </div> <!-- container -->
     </section>
-   -->
+
     
     <!--====== TEACHERS PART ENDS ======-->
    
@@ -574,7 +574,7 @@ Offline ও Online—উভয় সুবিধা</p>
                             <div class="logo">
                                 <a href="#"><img src="images/logo-2.png" alt="Logo"></a>
                             </div>
-                            <p>Gravida nibh vel velit auctor aliquetn quibibendum auci elit cons equat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate.</p>
+                            <p>EduLector-এ পড়াশোনা মানেই পরিকল্পিত ও ফলাফলমুখী শিক্ষা। অভিজ্ঞ শিক্ষকমণ্ডলী ও নিয়মিত মূল্যায়নের মাধ্যমে শিক্ষার্থীরা গড়ে তোলে আত্মবিশ্বাস, শৃঙ্খলা ও শেখার আগ্রহ।</p>
                             <ul class="mt-20">
                                 <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -591,9 +591,8 @@ Offline ও Online—উভয় সুবিধা</p>
                             <ul>
                                 <li><a href="index-2.html"><i class="fa fa-angle-right"></i>Home</a></li>
                                 <li><a href="about.html"><i class="fa fa-angle-right"></i>About us</a></li>
-                                <li><a href="contact.html"><i class="fa fa-angle-right"></i>Contact</a></li>
-                               <!--
-                                <li><a href="blog.html"><i class="fa fa-angle-right"></i>News</a></li>
+                                <li><a href="contact.html"><i class="fa fa-angle-right"></i>Contact</a></li
+                               <!-- <li><a href="blog.html"><i class="fa fa-angle-right"></i>News</a></li>
                                 <li><a href="events.html"><i class="fa fa-angle-right"></i>Event</a></li>
                             </ul>
                             <ul>
